# ftc-object-detection

./: README.md
TFObjectDetector/: README.md  packagePublish.gradle  settings.gradle
TFObjectDetector/app/: build.gradle
TFObjectDetector/app/src/androidTest/java/com/google/ftcresearch/: ExampleInstrumentedTest.java
TFObjectDetector/app/src/main/: AndroidManifest.xml
TFObjectDetector/app/src/main/java/com/google/ftcresearch/: MainActivity.java
TFObjectDetector/app/src/main/res/layout/: activity_camera.xml  activity_linear.xml  activity_main.xml
TFObjectDetector/app/src/main/res/layout-land/: activity_camera.xml  activity_linear.xml
TFObjectDetector/app/src/main/res/values/: strings.xml
TFObjectDetector/gradle/wrapper/: gradle-wrapper.properties
TFObjectDetector/tfod/: CMakeLists.txt  build.gradle
TFObjectDetector/tfod/src/androidTest/java/com/google/ftcresearch/tfod/: ExampleInstrumentedTest.java
TFObjectDetector/tfod/src/main/: AndroidManifest.xml
TFObjectDetector/tfod/src/main/cpp/: CMakeLists.txt  native-lib.cpp
TFObjectDetector/tfod/src/main/cpp/image_utils/: imageutils_jni.cc  rgb2yuv.cc  rgb2yuv.h  yuv2rgb.cc  yuv2rgb.h
TFObjectDetector/tfod/src/main/cpp/object_tracking/: config.h  object_tracker_jni.cc
TFObjectDetector/tfod/src/main/java/com/google/ftcresearch/tfod/detection/: AnnotatedFrameCallback.java  RecognizeImageRunnable.java  TFObjectDetector.java  TfodFrameManager.java  TfodParameters.java
TFObjectDetector/tfod/src/main/java/com/google/ftcresearch/tfod/generators/: CameraPreview.java  FrameGenerator.java  ImageFrameGenerator.java  MovingImageFrameGenerator.java  NativeCameraFrameGenerator.java
TFObjectDetector/tfod/src/main/java/com/google/ftcresearch/tfod/tracking/: MultiBoxTracker.java  ObjectTracker.java
TFObjectDetector/tfod/src/main/java/com/google/ftcresearch/tfod/util/: AnnotatedYuvRgbFrame.java  BorderedText.java  ImageUtils.java  Rate.java  Recognition.java  RollingAverage.java  Size.java  Timer.java  YuvRgbFrame.java
TFObjectDetector/tfod/src/main/res/raw/: tfod_default_labels.txt
TFObjectDetector/tfod/src/main/res/values/: strings.xml
TFObjectDetector/tfod/src/test/java/com/google/ftcresearch/tfod/: RollingAverageTest.java
TFObjectDetector/tfod/src/test/java/com/google/ftcresearch/tfod/util/: ImageUtilsTest.java
training/: README.md  bbox_writer.py  camera_cv.py  convert_labels_to_records.py  drawing_utils.py  find_bb.py  labeler.py  object_detector.py  object_detector_lite.py  rotate_videos.py  tracking.py
training/experimental/: ball_pid.py  blur_experiment.py  calibrate_camera.py  calibrated_camera_experiment.py  image_labeller.py  image_thresh.py  inspect_records.py  layers.py  obj_thresh_test.py  parse_blur_experiment.py  rename_labels.py  split_records.py  video_thresh.py
training/models/sample_mobilenet_v1_0.5_ssd_quantized/: detect.tflite  model.ckpt-200007.data-00000-of-00005  model.ckpt-200007.data-00002-of-00005  model.ckpt-200007.data-00003-of-00005  model.ckpt-200007.data-00004-of-00005  model.ckpt-200007.index  pipeline.config
